# Django_component_docker250722

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: celery.py  settings.py  urls.py
task/: models.py  serializers.py  tasks.py  urls.py  views.py
task/migrations/: 0001_initial.py
